   * The South Guard
     * improved Deoran graphics
   * The Rise of Wesnoth
     * new Wose Sapling, Warrior King graphics
 * graphics
   * the leader crown don't hide anymore the top of hp/xp bars (bug #9120) 
   * better flag icons for the status bar
   * taller flags that don't get hidden behind units so easily
   * fixed some drawing glitches in the top row (bug #8739 and #8071)
 * sound and music:
   * added a sound when a unit is slowed
   * added a music track containing only silence (for stopping all music instead
     of just changing it)
 * language and i18n:
   * updated translations: Bulgarian, Chinese, Czech, Danish, French, German,
     Italian, Polish, Spanish, Swedish
   * fixed word wrapping in tooltips for Asian languages (or very long words)
 * units:
   * balancing changes:
     * converted the cold melee attack of the Lich and Ancient Lich to arcane
     * decreased the arcane melee attack of the Wraith from 7-4 to 6-4
 * multiplayer:
   * added maps: Xanthe Chaos, Auction-X
   * revised maps: Castle Hopping Isle, Loris River, Crusaders Fields, 
     The Manzivan Traps
   * Team Survival: the teams are now set correctly and translatable
 * map editor
   * drawing terrain no longer erase starting positions
   * added an option "None" in the starting position menu
   * fixed a bug when overwriting starting positions
 * WML engine
   * removed deprecated special= support in [effect]
   * removed deprecated 1.2 map format support
   * [store_villages] and [store_locations] now use the standard location
     filter, meaning they accept all the possible keys of [filter_location]
   * [store_villages] must now use owner_side= instead of side=
   * replace [own_village] with macro {OWN_VILLAGE X Y SIDE}
   * new conditional tag [have_location], tests true if any location passes
     the standard location filter provided inside the tag
   * now the standard location filter supports [and] and [or] tags