@@ -27,6 +27,8 @@ Version 1.3.2+svn:
    * better flag icons for the status bar
    * taller flags that don't get hidden behind units so easily
    * fixed some drawing glitches in the top row (bug #8739 and #8071)
+   * it's now possible to zoom in till the theoretical minimum of 4 pixels
+     per hex.
  * sound and music:
    * added a sound when a unit is slowed
    * added a music track containing only silence (for stopping all music instead
